visual attention implementation

--- a/00.Fundamentals/01.Convolution.ipynb
+++ b/00.Fundamentals/01.Convolution.ipynb
@@ -174,11 +174,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username for 'https://github.com': ^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git add ."
+    "!git push origin"
    ]
   }
  ],
