visual attention test log

--- a/00.Fundamentals/02.Attention.ipynb
+++ b/00.Fundamentals/02.Attention.ipynb
@@ -13,11 +13,24 @@
     "\n",
     "#----------------------------\n",
     "# idea \n",
+    "#----------------------------\n",
     "# attention 자체는, global feature 에 대한 local feature 들의 상관관계 score 를 local feature 들에 반영해 주는 것. \n",
     "# self-attention 이면은 feature 자체에 대한 transform, cross-attention 이면은 query 에다가 query * key 결과 matrix (value) 를 concat => need to be checked  \n",
     "#\n",
     "# image classification layer 위에다가 쌓았을 때, global feature 를 반영하는 last feature maps 들을 만들고 학습 결과 향상 확인 \n",
+    "#\n",
     "#----------------------------\n",
+    "# Experiment Log \n",
+    "#----------------------------\n",
+    "# 0212 \n",
+    "# - element-wise dot product 로 각 patch 단위로 simlarity score 를 받는 형식의 attention  \n",
+    "# - pixel 값을 normalize 하지 않았을 때는, pixel 값이 큰 밝은 영역에서의 유사도가 큰 현상 \n",
+    "# - normalize 하였을 때는, 0.f x 0.f 되어버려서 가중치 값이 제대로 안나옴\n",
+    "# - heatmap, self-attention in CV 로 tricky 한 파트들 살짝 정리하고 가는 것이 맞을듯 \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
     "\n",
     "\n",
     "import torch\n",
