--- a/00.Fundamentals/04.MDC_Block_4.ipynb
+++ b/00.Fundamentals/04.MDC_Block_4.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x shape  torch.Size([1, 1024, 896, 448])\n",
-      "torch.Size([1, 256, 896, 448])\n",
-      "torch.Size([1, 256, 896, 448])\n",
-      "torch.Size([1, 256, 896, 448])\n",
-      "torch.Size([1, 256, 896, 448])\n",
-      "concat torch.Size([1, 1024, 896, 448])\n",
-      "Output shape: torch.Size([1, 1024, 896, 448])\n"
+      "x shape  torch.Size([1, 64, 896, 448])\n",
+      "torch.Size([1, 16, 896, 448])\n",
+      "torch.Size([1, 16, 896, 448])\n",
+      "torch.Size([1, 16, 896, 448])\n",
+      "torch.Size([1, 16, 896, 448])\n",
+      "concat torch.Size([1, 64, 896, 448])\n",
+      "Output shape: torch.Size([1, 64, 896, 448])\n"
      ]
     }
    ],
@@ -85,12 +85,15 @@
     "# Example usage:\n",
     "# Assuming input tensor x has shape (batch_size, in_channels, height, width)\n",
     "# and you want to obtain output channels out_channels with receptive fields r1, r2, r3 and dilation rates d1, d2, d3\n",
-    "in_channels = 1024 # encoder output == ( 1, 56, 28, 1024 ) x 4 \n",
-    "out_channels = 1024 \n",
+    "#in_channels = 32 # encoder output == ( 1, 56, 28, 1024 ) x 4 \n",
+    "#out_channels = 64 \n",
     "r1, r2, r3, r4 = 3, 5, 7, 9\n",
     "d1, d2, d3, d4 = 1, 2, 3, 4\n",
-    "x = torch.randn(1, in_channels, 896, 448)  # Example input tensor\n",
+    "#x = torch.randn(1, in_channels, 896, 448)  # Example input tensor\n",
     "\n",
+    "\n",
+    "x = torch.randn(1, 1024, 56, 28)\n",
+    "print(\"Input shape:\", x.shape)\n",
     "mdc_block = MDCBlock(in_channels, out_channels, r1, r2, r3, d1, d2, d3, d4)\n",
     "output = mdc_block(x)\n",
     "print(\"Output shape:\", output.shape)  # Output shape will depend on the input size and parameters of the block"
@@ -113,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
