--- a/01.Models/03.Swin_Vit/calculating_dim.ipynb
+++ b/01.Models/03.Swin_Vit/calculating_dim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,61 +65,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ShiftedWindowMSA(nn.Module):\n",
-    "\n",
-    "    '''\n",
-    "    input shape -> (b,(h*w), C)\n",
-    "    output shape -> (b, (h*w), C)\n",
-    "    '''\n",
-    "\n",
-    "    def __init__(self, embed_dim, num_heads, window_size=7):\n",
+    "    def __init__(self, embed_dim, num_heads, window_size=7, mask=False):\n",
     "        super().__init__()\n",
     "        self.embed_dim = embed_dim\n",
     "        self.num_heads = num_heads\n",
     "        self.window_size = window_size\n",
+    "        self.mask = mask\n",
     "        self.proj1 = nn.Linear(embed_dim, 3*embed_dim)\n",
     "        self.proj2 = nn.Linear(embed_dim, embed_dim)\n",
+    "        # self.embeddings = RelativeEmbeddings()\n",
     "\n",
     "    def forward(self, x):\n",
     "        h_dim = self.embed_dim / self.num_heads\n",
     "        height = width = int(math.sqrt(x.shape[1]))\n",
     "        x = self.proj1(x)\n",
+    "        x = rearrange(x, 'b (h w) (c K) -> b h w c K', K=3, h=height, w=width)\n",
     "\n",
-    "        x = rearrange(x, \"b (h w) (c K) -> b h w c K\", K=3, h=height, w=width)\n",
-    "        x = rearrange(x, \"b (h m1) (w m2) (H E) K -> b H h w (m1 m2) E K\", H=self.num_heads, m1=self.window_size, m2=self.window_size)\n",
+    "        if self.mask:\n",
+    "            x = torch.roll(x, (-self.window_size//2, -self.window_size//2), dims=(1,2))\n",
     "\n",
-    "        '''\n",
-    "        H = # of Attention Heads\n",
-    "        h,w = # of windows vertically and horizontally\n",
-    "        (m1 m2) = total size of each window\n",
-    "        E = head dimension\n",
-    "        K = 3 = a constant to break our matrix into 3 Q,K,V matricies \n",
-    "        '''\n",
-    "        print(\"x shape before chunk : \", x.shape)\n",
+    "        x = rearrange(x, 'b (h m1) (w m2) (H E) K -> b H h w (m1 m2) E K', H=self.num_heads, m1=self.window_size, m2=self.window_size)\n",
     "        Q, K, V = x.chunk(3, dim=6)\n",
-    "        print(\"#---- Q shape after chunk : \", Q.shape)\n",
     "        Q, K, V = Q.squeeze(-1), K.squeeze(-1), V.squeeze(-1)\n",
-    "        print(\"#---- Q shape : \", Q.shape)\n",
-    "        print(\"#---- tranposed K shape : \", K.transpose(4,5).shape)\n",
-    "        \n",
     "        att_scores = (Q @ K.transpose(4,5)) / math.sqrt(h_dim)\n",
-    "        print(\"#---- att score shape : \", att_scores.shape)\n",
+    "        # att_scores = self.embeddings(att_scores)\n",
+    "\n",
+    "        '''\n",
+    "          shape of att_scores = (b, H, h, w, (m1*m2), (m1*m2))\n",
+    "          we simply have to generate our row/column masks and apply them\n",
+    "          to the last row and columns of windows which are [:,:,-1,:] and [:,:,:,-1]\n",
+    "        '''\n",
+    "\n",
+    "        if self.mask:\n",
+    "            row_mask = torch.zeros((self.window_size**2, self.window_size**2)).cuda()\n",
+    "            row_mask[-self.window_size * (self.window_size//2):, 0:-self.window_size * (self.window_size//2)] = float('-inf')\n",
+    "            row_mask[0:-self.window_size * (self.window_size//2), -self.window_size * (self.window_size//2):] = float('-inf')\n",
+    "            column_mask = rearrange(row_mask, '(r w1) (c w2) -> (w1 r) (w2 c)', w1=self.window_size, w2=self.window_size).cuda()\n",
+    "            att_scores[:, :, -1, :] += row_mask\n",
+    "            att_scores[:, :, :, -1] += column_mask\n",
+    "\n",
     "        att = F.softmax(att_scores, dim=-1) @ V\n",
-    "        \n",
+    "        x = rearrange(att, 'b H h w (m1 m2) E -> b (h m1) (w m2) (H E)', m1=self.window_size, m2=self.window_size)\n",
     "\n",
-    "        x = rearrange(att, \"b H h w (m1 m2) E -> b (h m1) (w m2) (H E)\", m1=self.window_size, m2=self.window_size)\n",
-    "        x = rearrange(x, \"b h w c -> b (h w) c\")\n",
+    "        if self.mask:\n",
+    "            x = torch.roll(x, (self.window_size//2, self.window_size//2), (1,2))\n",
     "\n",
+    "        x = rearrange(x, 'b h w c -> b (h w) c')\n",
     "        return self.proj2(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +130,7 @@
        "torch.Size([1, 3, 224, 224])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +162,7 @@
        "torch.Size([1, 3136, 96])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +183,7 @@
        "torch.Size([1, 784, 192])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,23 +195,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = ShiftedWindowMSA_(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x shape before chunk :  torch.Size([1, 4, 8, 8, 49, 24, 3])\n",
-      "#---- Q shape after chunk :  torch.Size([1, 4, 8, 8, 49, 24, 1])\n",
-      "#---- Q shape :  torch.Size([1, 4, 8, 8, 49, 24])\n",
-      "#---- tranposed K shape :  torch.Size([1, 4, 8, 8, 24, 49])\n",
-      "#---- att score shape :  torch.Size([1, 4, 8, 8, 49, 49])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3136, 96])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "z = ShiftedWindowMSA_(a)"
+    "z.shape"
    ]
   },
   {
