segmentation for ship target

--- a/01.Models/04.SAM_fine/3.train_.ipynb
+++ b/01.Models/04.SAM_fine/3.train_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,18 +35,28 @@
     "#---------------------------------------\n",
     "import custom_dataset\n",
     "import utils_rs\n",
+    "import dataset_rs\n",
     "\n",
     "#----------------------------------------------\n",
     "import swin\n",
     "import upper_net_mmseg\n",
-    "import models\n"
+    "import models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hdd/eric/.conda/envs/8.tmp.copied/lib/python3.8/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3190.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    }
+   ],
    "source": [
     "# model swin\n",
     "model_swin = swin.swin()\n",
@@ -67,11 +77,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# unload weights from the ddp setting \n",
+    "w_path = \"./swint_upernet_imp_sep_model.pth\"\n",
+    "weights_ = torch.load(w_path, map_location=torch.device('cpu'))\n",
+    "swin_samrs.load_state_dict(  weights_['state_dict'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ISAID_CLASSES = ('background', 'ship', 'store_tank', 'baseball_diamond',\n",
     "               'tennis_court', 'basketball_court', 'Ground_Track_Field',\n",
     "               'Bridge', 'Large_Vehicle', 'Small_Vehicle', 'Helicopter',\n",
@@ -657,7 +689,7 @@
     "for epoch in range(epochs):\n",
     "\n",
     "    iteration = 0\n",
-    "    running_loss = 0 \n",
+    "    epoch_running_loss = 0 \n",
     "    \n",
     "    for i, data in enumerate(tqdm(dataloader, desc=f\"Epoch {epoch}\")):\n",
     "\n",
@@ -679,7 +711,7 @@
     "        optimizer.step()\n",
     "\n",
     "        # stat\n",
-    "        running_loss += loss.item()\n",
+    "        epoch_running_loss += loss.item()\n",
     "\n",
     "        # log\n",
     "        logger.info(f\"[{epoch}, {i}] loss: {loss:.8f}\")\n",
@@ -691,15 +723,12 @@
     "\n",
     "        log_iter = 200\n",
     "        if (i % log_iter) == 0:    # print every 2000 mini-batches\n",
-    "            print(f\"epoch : {epoch} iter : {i} /  total_iter : {len(dataloader)} running_loss : {running_loss / log_iter}\")\n",
-    "            \n",
-    "            running_loss = 0.0\n",
-    "         \n",
-    "            \n",
-    "        #-----\n",
-    "    #-- epoch\n",
+    "            print(f\"epoch : {epoch} iter : {i} /  total_iter : {len(dataloader)} running_loss : {epoch_running_loss / i}\")\n",
+    "        \n",
+    "    \n",
+    "    #-- save \n",
     "    save_path = f\"./2.ckpts/swin_rs_{epoch + 1}.pt\"\n",
-    "    torch.save(swin_samrs.state_dict(), save_path)\n",
+    "    torch.save(model.state_dict(), save_path)\n",
     "\n",
     "\n"
    ]
