satellite image with UMAP and tSNE

--- a/04.Image_Processing/09.DOTA_crop_box_to_image.ipynb
+++ b/04.Image_Processing/09.DOTA_crop_box_to_image.ipynb
@@ -27,26 +27,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "35462"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len( os.listdir(img_folder) )"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -326,10 +306,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dest_folder = \"/mnt/hdd/eric/.tmp_ipy/00.Data/DOTA_dataset_chips\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(69565, 69565)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(os.listdir(\"/mnt/hdd/eric/.tmp_ipy/00.Data/DOTA_dataset_chips/v2/anns\")),len(os.listdir(\"/mnt/hdd/eric/.tmp_ipy/00.Data/DOTA_dataset_chips/v2/images\"))"
+   ]
   }
  ],
  "metadata": {
