albumentation choices with configuration options, parallel run and log check

--- a/07.Challenge/01.MapYourCity_HuggingFace/02.Visualize_n_dataset_v2.ipynb
+++ b/07.Challenge/01.MapYourCity_HuggingFace/02.Visualize_n_dataset_v2.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hdd/eric/.conda/envs/mapv2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "INFO:albumentations.check_version:A new version of Albumentations is available: 1.4.10 (you have 1.4.8). Upgrade using: pip install --upgrade albumentations\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from PIL import Image\n",
@@ -21,111 +31,33 @@
     "import RS_models\n",
     "import RS_utils\n",
     "\n",
+    "import map_dataset\n",
+    "\n",
     "import rasterio\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import DataLoader\n",
     "import torchvision\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
-    "import torchvision.transforms.functional as F\n",
-    "\n",
-    "sys.path.append(\"/mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/00.Libs\")\n",
-    "import RS_dataset\n",
-    "import RS_models\n",
-    "import RS_utils\n",
-    "\n",
-    "\n",
-    "\n",
-    "#--- dataset class \n",
-    "class Map_Dataset(torch.utils.data.Dataset):      \n",
-    "    def __init__(self, list_IDs,transform,train_path): \n",
-    "        self.list_IDs = list_IDs\n",
-    "        self.transform = transform\n",
-    "        self.train_path = train_path\n",
-    "        self.max_value = 376\n",
-    "        self.min_value = 256\n",
-    "    def __len__(self):\n",
-    "        return len(self.list_IDs)\n",
-    "    \n",
-    "    \n",
-    "    def resize(self,img_):\n",
-    "        resize_transform = torchvision.transforms.Resize(\n",
-    "            size=self.min_value, max_size= self.max_value,\n",
-    "            interpolation=torchvision.transforms.InterpolationMode.BILINEAR \n",
-    "        )\n",
-    "        img_ = resize_transform(img_)\n",
-    "        return img_\n",
-    "    \n",
-    "    \n",
-    "    def centercrop_normalize(self,img_):\n",
-    "        torchvision_transform = torchvision.transforms.Compose([\n",
-    "        \n",
-    "        torchvision.transforms.CenterCrop(self.max_value),\n",
-    "        torchvision.transforms.ToTensor(),\n",
-    "        torchvision.transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))           \n",
-    "        ])\n",
-    "        \n",
-    "        return torchvision_transform(img_)\n",
-    "    \n",
-    "    \n",
-    "    def ratio_pad(self,img_da):\n",
-    "        # PIL_image = Image.fromarray(bb)\n",
-    "\n",
-    "        #--\n",
-    "        max_value = self.max_value\n",
-    "        #width_, height_ = img_da.shape[0],img_da.shape[1]\n",
-    "        width_, height_ = img_da.size\n",
-    "        # left top right bottom \n",
-    "        img_da = F.pad(img=img_da,padding=[(max_value-width_)//2+1, (max_value-height_)//2+1, (max_value-width_)//2+1,(max_value-height_)//2+1], padding_mode=\"constant\", fill=0)    \n",
-    "        #img_da = F.pad(img=img_da,padding=[0, max_value-height_, max_value-width_,0], padding_mode=\"constant\", fill=0)\n",
-    "        \n",
-    "        return img_da\n",
-    "    \n",
-    "    \n",
-    "    def __getitem__(self, index): \n",
-    "        ID = self.list_IDs[index] \n",
-    "        X1 = Image.open(self.train_path + ID + '/street.jpg').convert('RGB')\n",
-    "        #X1 = cv2.resize(X1, (256, 256))\n",
-    "        #X1 = np.asarray(X1)\n",
-    "        #X1 = np.transpose(X1,[1, 2, 0])\n",
-    "        \n",
-    "        X1 = self.resize(X1)\n",
-    "        X1 = self.ratio_pad(X1)\n",
-    "        X1 = self.centercrop_normalize(X1)\n",
-    "        #X1 = cv2.resize(X1, (256, 256)) \n",
-    "        \n",
-    "        X2 = Image.open(self.train_path + ID + '/orthophoto.tif')  \n",
-    "        if self.transform:\n",
-    "            X2 = self.transform(X2)\n",
-    "        #X2 = cv2.resize(X2, (256, 256)) \n",
-    "        \n",
-    "        \n",
-    "        X3 = rasterio.open(self.train_path + ID + '/s2_l2a.tif').read() \n",
-    "        X3 = np.transpose(X3, [1, 2, 0]) \n",
-    "        #X3 = self.transform(X3)\n",
-    "        \n",
-    "        y = int(open(self.train_path + ID + '/label.txt', \"r\").read())\n",
-    "        return X1, y \n",
-    "    \n",
-    "#---"
+    "import torchvision.transforms.functional as F\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #--- argparser\n",
-    "# parser = argparse.ArgumentParser()\n",
-    "# parser.add_argument('--cfg', type=str, default='/mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/07.Challenge/01.MapYourCity_HuggingFace/configs/finetune.yaml')\n",
-    "# args = parser.parse_args()\n",
-    "# cfg = argparse.Namespace(**yaml.load(open(args.cfg), Loader=yaml.SafeLoader))"
+    "#--- argparser\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument('--cfg', type=str, default='/mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/07.Challenge/01.MapYourCity_HuggingFace/configs/finetune_4.yaml')\n",
+    "args = parser.parse_args([])\n",
+    "cfg = argparse.Namespace(**yaml.load(open(args.cfg), Loader=yaml.SafeLoader))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,13 +119,13 @@
     "# width : height = 2 : 3 = 1000 : 1500\n",
     "# 256 : 375\n",
     "\n",
-    "data_transform = torchvision.transforms.Resize(\n",
-    "    size=256, max_size= 376\n",
-    ")\n",
+    "# data_transform = torchvision.transforms.Resize(\n",
+    "#     size=256, max_size= 376\n",
+    "# )\n",
     "\n",
     "\n",
-    "train_set = Map_Dataset(names_train, data_transform, train_path) \n",
-    "test_set = Map_Dataset(names_train, False, train_path) \n",
+    "train_set = map_dataset.Map_Dataset_v3(names_train, train_path, 376, cfg  ) \n",
+    "test_set = map_dataset.Map_Dataset_v3(names_valid, train_path, 376, cfg  )  \n",
     "\n",
     "import random\n",
     "qq = random.randint(0,999)\n",
