--- a/00.Fundamentals/26.Label_to_Distribution_v3.ipynb
+++ b/00.Fundamentals/26.Label_to_Distribution_v3.ipynb
@@ -280,10 +280,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 7772ffa] Label Distribution with KL divergence => hype : variance value\n",
+      " 1 file changed, 310 insertions(+)\n",
+      " create mode 100644 00.Fundamentals/26.Label_to_Distribution_v3.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Label Distribution with KL divergence => hype : variance value\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username for 'https://github.com': ^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin"
+   ]
   }
  ],
  "metadata": {
